Parser/ParGrammar.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParGrammar
  ( happyError
  , myLexer
  , pSBlock1
  ) where

import Prelude

import qualified AbsGrammar
import LexGrammar

}

%name pSBlock1 SBlock1
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'        { PT _ (TS _ 1)  }
  '!='       { PT _ (TS _ 2)  }
  '$'        { PT _ (TS _ 3)  }
  '%'        { PT _ (TS _ 4)  }
  '&'        { PT _ (TS _ 5)  }
  '&&'       { PT _ (TS _ 6)  }
  '&='       { PT _ (TS _ 7)  }
  '('        { PT _ (TS _ 8)  }
  ')'        { PT _ (TS _ 9)  }
  '*'        { PT _ (TS _ 10) }
  '**'       { PT _ (TS _ 11) }
  '*='       { PT _ (TS _ 12) }
  '+'        { PT _ (TS _ 13) }
  '++'       { PT _ (TS _ 14) }
  '+='       { PT _ (TS _ 15) }
  ','        { PT _ (TS _ 16) }
  '-'        { PT _ (TS _ 17) }
  '--'       { PT _ (TS _ 18) }
  '-='       { PT _ (TS _ 19) }
  '...'      { PT _ (TS _ 20) }
  '/'        { PT _ (TS _ 21) }
  '/='       { PT _ (TS _ 22) }
  ':'        { PT _ (TS _ 23) }
  ':='       { PT _ (TS _ 24) }
  ';'        { PT _ (TS _ 25) }
  '<'        { PT _ (TS _ 26) }
  '<='       { PT _ (TS _ 27) }
  '=='       { PT _ (TS _ 28) }
  '>'        { PT _ (TS _ 29) }
  '>='       { PT _ (TS _ 30) }
  'False'    { PT _ (TS _ 31) }
  'True'     { PT _ (TS _ 32) }
  '['        { PT _ (TS _ 33) }
  ']'        { PT _ (TS _ 34) }
  '^='       { PT _ (TS _ 35) }
  'bool'     { PT _ (TS _ 36) }
  'break'    { PT _ (TS _ 37) }
  'char'     { PT _ (TS _ 38) }
  'continue' { PT _ (TS _ 39) }
  'def'      { PT _ (TS _ 40) }
  'else'     { PT _ (TS _ 41) }
  'float'    { PT _ (TS _ 42) }
  'if'       { PT _ (TS _ 43) }
  'int'      { PT _ (TS _ 44) }
  'ref'      { PT _ (TS _ 45) }
  'return'   { PT _ (TS _ 46) }
  'string'   { PT _ (TS _ 47) }
  'val'      { PT _ (TS _ 48) }
  'var'      { PT _ (TS _ 49) }
  'void'     { PT _ (TS _ 50) }
  'while'    { PT _ (TS _ 51) }
  '{'        { PT _ (TS _ 52) }
  '|='       { PT _ (TS _ 53) }
  '||'       { PT _ (TS _ 54) }
  '}'        { PT _ (TS _ 55) }
  L_Ident    { PT _ (TV $$)   }
  L_charac   { PT _ (TC $$)   }
  L_doubl    { PT _ (TD $$)   }
  L_integ    { PT _ (TI $$)   }
  L_quoted   { PT _ (TL $$)   }

%%

Ident :: { AbsGrammar.Ident }
Ident  : L_Ident { AbsGrammar.Ident $1 }

Char    :: { Char }
Char     : L_charac { (read $1) :: Char }

Double  :: { Double }
Double   : L_doubl  { (read $1) :: Double }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

String  :: { String }
String   : L_quoted { $1 }

SBlock :: { AbsGrammar.SBlock }
SBlock : '{' SBlock1 '}' { $2 }

SBlock1 :: { AbsGrammar.SBlock }
SBlock1 : ListInstruction { AbsGrammar.Block $1 }

Instruction :: { AbsGrammar.Instruction }
Instruction
  : SStatement { AbsGrammar.Statement $1 }
  | SDeclaration { AbsGrammar.Declaration $1 }

ListInstruction :: { [AbsGrammar.Instruction] }
ListInstruction
  : {- empty -} { [] }
  | Instruction { (:[]) $1 }
  | Instruction ';' ListInstruction { (:) $1 $3 }

SDeclaration :: { AbsGrammar.SDeclaration }
SDeclaration
  : 'def' Ident ':' Type ':=' Expr { AbsGrammar.ConstDecl $2 $4 $6 }
  | 'var' Ident ':' Type ':=' Expr { AbsGrammar.VarDecl $2 $4 $6 }
  | 'def' Ident '(' ListParameter ')' ':' Type SBlock { AbsGrammar.FunDecl $2 $4 $7 $8 }

ListParameter :: { [AbsGrammar.Parameter] }
ListParameter
  : {- empty -} { [] }
  | Parameter { (:[]) $1 }
  | Parameter ',' ListParameter { (:) $1 $3 }

Parameter :: { AbsGrammar.Parameter }
Parameter : Modality Ident ':' Type { AbsGrammar.Param $1 $2 $4 }

Modality :: { AbsGrammar.Modality }
Modality
  : {- empty -} { AbsGrammar.Modality1 }
  | 'val' { AbsGrammar.Modality_val }
  | 'ref' { AbsGrammar.Modality_ref }

Type :: { AbsGrammar.Type }
Type
  : SBasicType { AbsGrammar.BasicType $1 }
  | '[' Expr ']' Type { AbsGrammar.ArrayType $2 $4 }
  | '[' ']' Type { AbsGrammar.UnsizedArrayType $3 }
  | '&' Type { AbsGrammar.Pointer $2 }

SBasicType :: { AbsGrammar.SBasicType }
SBasicType
  : 'bool' { AbsGrammar.SBasicType_bool }
  | 'char' { AbsGrammar.SBasicType_char }
  | 'int' { AbsGrammar.SBasicType_int }
  | 'string' { AbsGrammar.SBasicType_string }
  | 'float' { AbsGrammar.SBasicType_float }
  | 'void' { AbsGrammar.SBasicType_void }

SStatement :: { AbsGrammar.SStatement }
SStatement
  : SBlock { AbsGrammar.Compound $1 }
  | FunCall { AbsGrammar.ProcCall $1 }
  | JumpSStatement { AbsGrammar.Jump $1 }
  | IterSStatement { AbsGrammar.Iter $1 }
  | BranchSStatement { AbsGrammar.Branch $1 }
  | Expr Assignment_op Expr { AbsGrammar.Assign $1 $2 $3 }
  | SStatement1 { $1 }

Assignment_op :: { AbsGrammar.Assignment_op }
Assignment_op
  : ':=' { AbsGrammar.AssignOp }
  | '*=' { AbsGrammar.AssignMul }
  | '+=' { AbsGrammar.AssignAdd }
  | '/=' { AbsGrammar.AssignDiv }
  | '-=' { AbsGrammar.AssignSub }
  | '^=' { AbsGrammar.AssignPow }
  | '&=' { AbsGrammar.AssignAnd }
  | '|=' { AbsGrammar.AssignOr }

JumpSStatement :: { AbsGrammar.JumpSStatement }
JumpSStatement
  : 'break' { AbsGrammar.Break }
  | 'continue' { AbsGrammar.Continue }
  | 'return' { AbsGrammar.RetExpVoid }
  | 'return' Expr { AbsGrammar.RetExp $2 }

BranchSStatement :: { AbsGrammar.BranchSStatement }
BranchSStatement
  : 'if' '(' Expr ')' SBlock { AbsGrammar.IfNoElse $3 $5 }
  | 'if' '(' Expr ')' SBlock 'else' SBlock { AbsGrammar.IfElse $3 $5 $7 }

IterSStatement :: { AbsGrammar.IterSStatement }
IterSStatement
  : 'while' '(' Expr ')' SBlock { AbsGrammar.While $3 $5 }

Expr :: { AbsGrammar.Expr }
Expr : Expr '||' Expr1 { AbsGrammar.Or $1 $3 } | Expr1 { $1 }

Expr1 :: { AbsGrammar.Expr }
Expr1 : Expr1 '&&' Expr2 { AbsGrammar.And $1 $3 } | Expr2 { $1 }

Expr2 :: { AbsGrammar.Expr }
Expr2 : '!' Expr3 { AbsGrammar.Not $2 } | Expr3 { $1 }

Expr3 :: { AbsGrammar.Expr }
Expr3
  : Expr4 '==' Expr4 { AbsGrammar.Eq $1 $3 }
  | Expr4 '!=' Expr4 { AbsGrammar.Neq $1 $3 }
  | Expr4 '<' Expr4 { AbsGrammar.Lt $1 $3 }
  | Expr4 '<=' Expr4 { AbsGrammar.LtE $1 $3 }
  | Expr4 '>' Expr4 { AbsGrammar.Gt $1 $3 }
  | Expr4 '>=' Expr4 { AbsGrammar.GtE $1 $3 }
  | Expr4 { $1 }

Expr4 :: { AbsGrammar.Expr }
Expr4
  : Expr4 '+' Expr5 { AbsGrammar.Add $1 $3 }
  | Expr4 '-' Expr5 { AbsGrammar.Sub $1 $3 }
  | Expr5 { $1 }

Expr5 :: { AbsGrammar.Expr }
Expr5
  : Expr5 '*' Expr6 { AbsGrammar.Mul $1 $3 }
  | Expr5 '/' Expr6 { AbsGrammar.Div $1 $3 }
  | Expr5 '%' Expr6 { AbsGrammar.Mod $1 $3 }
  | Expr6 { $1 }

Expr6 :: { AbsGrammar.Expr }
Expr6 : Expr7 '**' Expr6 { AbsGrammar.Pow $1 $3 } | Expr7 { $1 }

Expr7 :: { AbsGrammar.Expr }
Expr7 : '-' Expr8 { AbsGrammar.Neg $2 } | Expr8 { $1 }

Expr8 :: { AbsGrammar.Expr }
Expr8 : SStatement1 { AbsGrammar.ExpAssign $1 } | Expr9 { $1 }

Expr9 :: { AbsGrammar.Expr }
Expr9
  : '&' Expr9 { AbsGrammar.Ref $2 }
  | '$' Expr9 { AbsGrammar.Deref $2 }
  | Expr9 '[' Expr ']' { AbsGrammar.ArrayAcc $1 $3 }
  | Expr10 { $1 }

Expr10 :: { AbsGrammar.Expr }
Expr10
  : Ident { AbsGrammar.Id $1 }
  | FunCall { AbsGrammar.FCall $1 }
  | Expr11 { $1 }

Expr11 :: { AbsGrammar.Expr }
Expr11
  : Integer { AbsGrammar.Int $1 }
  | Char { AbsGrammar.Char $1 }
  | String { AbsGrammar.String $1 }
  | Double { AbsGrammar.Float $1 }
  | Boolean { AbsGrammar.Bool $1 }
  | Expr12 { $1 }

Boolean :: { AbsGrammar.Boolean }
Boolean
  : 'True' { AbsGrammar.Boolean_True }
  | 'False' { AbsGrammar.Boolean_False }

Expr12 :: { AbsGrammar.Expr }
Expr12
  : '[' ListExpr11 ']' { AbsGrammar.Array $2 }
  | '[' Expr11 '...' Expr11 ']' { AbsGrammar.RangedArray $2 $4 }
  | '(' Expr ')' { $2 }

ListExpr11 :: { [AbsGrammar.Expr] }
ListExpr11
  : Expr11 { (:[]) $1 } | Expr11 ',' ListExpr11 { (:) $1 $3 }

SStatement1 :: { AbsGrammar.SStatement }
SStatement1
  : '++' Expr9 { AbsGrammar.PreInc $2 }
  | '--' Expr9 { AbsGrammar.PreDecr $2 }
  | Expr9 '++' { AbsGrammar.PostInc $1 }
  | Expr9 '--' { AbsGrammar.PostDecr $1 }

FunCall :: { AbsGrammar.FunCall }
FunCall : Ident '(' ListExpr ')' { AbsGrammar.Call $1 $3 }

ListExpr :: { [AbsGrammar.Expr] }
ListExpr
  : {- empty -} { [] }
  | Expr { (:[]) $1 }
  | Expr ',' ListExpr { (:) $1 $3 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
