Parser/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser/Par.y
-----------------------------------------------------------------------------

state 65 contains 3 shift/reduce conflicts.
state 67 contains 3 shift/reduce conflicts.
state 69 contains 3 shift/reduce conflicts.
state 70 contains 3 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pSBlock1 -> SBlock1                         (0)
	Ident -> L_Ident                                   (1)
	Char -> L_charac                                   (2)
	Double -> L_doubl                                  (3)
	Integer -> L_integ                                 (4)
	String -> L_quoted                                 (5)
	SBlock -> '{' SBlock1 '}'                          (6)
	SBlock1 -> ListInstruction                         (7)
	Instruction -> SStatement                          (8)
	Instruction -> SDeclaration                        (9)
	ListInstruction ->                                 (10)
	ListInstruction -> Instruction                     (11)
	ListInstruction -> Instruction ';' ListInstruction   (12)
	SDeclaration -> 'def' Ident ':' Type ':=' Expr     (13)
	SDeclaration -> 'var' Ident ':' Type ':=' Expr     (14)
	SDeclaration -> 'def' Ident '(' ListParameter ')' ':' Type SBlock   (15)
	ListParameter ->                                   (16)
	ListParameter -> Parameter                         (17)
	ListParameter -> Parameter ',' ListParameter       (18)
	Parameter -> Modality Ident ':' Type               (19)
	Modality ->                                        (20)
	Modality -> 'val'                                  (21)
	Modality -> 'ref'                                  (22)
	Type -> SBasicType                                 (23)
	Type -> '[' Expr ']' Type                          (24)
	Type -> '[' ']' Type                               (25)
	Type -> '&' Type                                   (26)
	SBasicType -> 'bool'                               (27)
	SBasicType -> 'char'                               (28)
	SBasicType -> 'int'                                (29)
	SBasicType -> 'string'                             (30)
	SBasicType -> 'float'                              (31)
	SBasicType -> 'void'                               (32)
	SStatement -> SBlock                               (33)
	SStatement -> FunCall                              (34)
	SStatement -> JumpSStatement                       (35)
	SStatement -> IterSStatement                       (36)
	SStatement -> BranchSStatement                     (37)
	SStatement -> Expr Assignment_op Expr              (38)
	SStatement -> SStatement1                          (39)
	Assignment_op -> ':='                              (40)
	Assignment_op -> '*='                              (41)
	Assignment_op -> '+='                              (42)
	Assignment_op -> '/='                              (43)
	Assignment_op -> '-='                              (44)
	Assignment_op -> '^='                              (45)
	Assignment_op -> '&='                              (46)
	Assignment_op -> '|='                              (47)
	JumpSStatement -> 'break'                          (48)
	JumpSStatement -> 'continue'                       (49)
	JumpSStatement -> 'return'                         (50)
	JumpSStatement -> 'return' Expr                    (51)
	BranchSStatement -> 'if' '(' Expr ')' SBlock       (52)
	BranchSStatement -> 'if' '(' Expr ')' SBlock 'else' SBlock   (53)
	IterSStatement -> 'while' '(' Expr ')' SBlock      (54)
	Expr -> Expr '||' Expr1                            (55)
	Expr -> Expr1                                      (56)
	Expr1 -> Expr1 '&&' Expr2                          (57)
	Expr1 -> Expr2                                     (58)
	Expr2 -> '!' Expr3                                 (59)
	Expr2 -> Expr3                                     (60)
	Expr3 -> Expr4 '==' Expr4                          (61)
	Expr3 -> Expr4 '!=' Expr4                          (62)
	Expr3 -> Expr4 '<' Expr4                           (63)
	Expr3 -> Expr4 '<=' Expr4                          (64)
	Expr3 -> Expr4 '>' Expr4                           (65)
	Expr3 -> Expr4 '>=' Expr4                          (66)
	Expr3 -> Expr4                                     (67)
	Expr4 -> Expr4 '+' Expr5                           (68)
	Expr4 -> Expr4 '-' Expr5                           (69)
	Expr4 -> Expr5                                     (70)
	Expr5 -> Expr5 '*' Expr6                           (71)
	Expr5 -> Expr5 '/' Expr6                           (72)
	Expr5 -> Expr5 '%' Expr6                           (73)
	Expr5 -> Expr6                                     (74)
	Expr6 -> Expr7 '**' Expr6                          (75)
	Expr6 -> Expr7                                     (76)
	Expr7 -> '-' Expr8                                 (77)
	Expr7 -> Expr8                                     (78)
	Expr8 -> '&' Expr8                                 (79)
	Expr8 -> '$' Expr8                                 (80)
	Expr8 -> Expr8 '[' Expr ']'                        (81)
	Expr8 -> Expr9                                     (82)
	Expr9 -> Ident                                     (83)
	Expr9 -> SStatement1                               (84)
	Expr9 -> Expr10                                    (85)
	Expr10 -> FunCall                                  (86)
	Expr10 -> Expr11                                   (87)
	Expr11 -> Integer                                  (88)
	Expr11 -> Char                                     (89)
	Expr11 -> String                                   (90)
	Expr11 -> Double                                   (91)
	Expr11 -> Boolean                                  (92)
	Expr11 -> Expr12                                   (93)
	Boolean -> 'True'                                  (94)
	Boolean -> 'False'                                 (95)
	Expr12 -> '[' ListExpr11 ']'                       (96)
	Expr12 -> '(' Expr ')'                             (97)
	ListExpr11 -> Expr11                               (98)
	ListExpr11 -> Expr11 ',' ListExpr11                (99)
	SStatement1 -> '++' Expr8                          (100)
	SStatement1 -> '--' Expr8                          (101)
	SStatement1 -> Expr8 '++'                          (102)
	SStatement1 -> Expr8 '--'                          (103)
	FunCall -> Ident '(' ListExpr ')'                  (104)
	ListExpr ->                                        (105)
	ListExpr -> Expr                                   (106)
	ListExpr -> Expr ',' ListExpr                      (107)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'$'            { PT _ (TS _ 3) }
	'%'            { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'&='           { PT _ (TS _ 7) }
	'('            { PT _ (TS _ 8) }
	')'            { PT _ (TS _ 9) }
	'*'            { PT _ (TS _ 10) }
	'**'           { PT _ (TS _ 11) }
	'*='           { PT _ (TS _ 12) }
	'+'            { PT _ (TS _ 13) }
	'++'           { PT _ (TS _ 14) }
	'+='           { PT _ (TS _ 15) }
	','            { PT _ (TS _ 16) }
	'-'            { PT _ (TS _ 17) }
	'--'           { PT _ (TS _ 18) }
	'-='           { PT _ (TS _ 19) }
	'/'            { PT _ (TS _ 20) }
	'/='           { PT _ (TS _ 21) }
	':'            { PT _ (TS _ 22) }
	':='           { PT _ (TS _ 23) }
	';'            { PT _ (TS _ 24) }
	'<'            { PT _ (TS _ 25) }
	'<='           { PT _ (TS _ 26) }
	'=='           { PT _ (TS _ 27) }
	'>'            { PT _ (TS _ 28) }
	'>='           { PT _ (TS _ 29) }
	'False'        { PT _ (TS _ 30) }
	'True'         { PT _ (TS _ 31) }
	'['            { PT _ (TS _ 32) }
	']'            { PT _ (TS _ 33) }
	'^='           { PT _ (TS _ 34) }
	'bool'         { PT _ (TS _ 35) }
	'break'        { PT _ (TS _ 36) }
	'char'         { PT _ (TS _ 37) }
	'continue'     { PT _ (TS _ 38) }
	'def'          { PT _ (TS _ 39) }
	'else'         { PT _ (TS _ 40) }
	'float'        { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'int'          { PT _ (TS _ 43) }
	'ref'          { PT _ (TS _ 44) }
	'return'       { PT _ (TS _ 45) }
	'string'       { PT _ (TS _ 46) }
	'val'          { PT _ (TS _ 47) }
	'var'          { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'|='           { PT _ (TS _ 52) }
	'||'           { PT _ (TS _ 53) }
	'}'            { PT _ (TS _ 54) }
	L_Ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pSBlock1 rule  0
	Ident           rule  1
	Char            rule  2
	Double          rule  3
	Integer         rule  4
	String          rule  5
	SBlock          rule  6
	SBlock1         rule  7
	Instruction     rules 8, 9
	ListInstruction rules 10, 11, 12
	SDeclaration    rules 13, 14, 15
	ListParameter   rules 16, 17, 18
	Parameter       rule  19
	Modality        rules 20, 21, 22
	Type            rules 23, 24, 25, 26
	SBasicType      rules 27, 28, 29, 30, 31, 32
	SStatement      rules 33, 34, 35, 36, 37, 38, 39
	Assignment_op   rules 40, 41, 42, 43, 44, 45, 46, 47
	JumpSStatement  rules 48, 49, 50, 51
	BranchSStatement rules 52, 53
	IterSStatement  rule  54
	Expr            rules 55, 56
	Expr1           rules 57, 58
	Expr2           rules 59, 60
	Expr3           rules 61, 62, 63, 64, 65, 66, 67
	Expr4           rules 68, 69, 70
	Expr5           rules 71, 72, 73, 74
	Expr6           rules 75, 76
	Expr7           rules 77, 78
	Expr8           rules 79, 80, 81, 82
	Expr9           rules 83, 84, 85
	Expr10          rules 86, 87
	Expr11          rules 88, 89, 90, 91, 92, 93
	Boolean         rules 94, 95
	Expr12          rules 96, 97
	ListExpr11      rules 98, 99
	SStatement1     rules 100, 101, 102, 103
	FunCall         rule  104
	ListExpr        rules 105, 106, 107

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pSBlock1 -> . SBlock1                        (rule 0)

	'!'            shift, and enter state 33
	'$'            shift, and enter state 34
	'&'            shift, and enter state 35
	'('            shift, and enter state 36
	'++'           shift, and enter state 37
	'-'            shift, and enter state 38
	'--'           shift, and enter state 39
	'False'        shift, and enter state 40
	'True'         shift, and enter state 41
	'['            shift, and enter state 42
	'break'        shift, and enter state 43
	'continue'     shift, and enter state 44
	'def'          shift, and enter state 45
	'if'           shift, and enter state 46
	'return'       shift, and enter state 47
	'var'          shift, and enter state 48
	'while'        shift, and enter state 49
	'{'            shift, and enter state 50
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 51
	L_doubl        shift, and enter state 52
	L_integ        shift, and enter state 53
	L_quoted       shift, and enter state 54
	%eof           reduce using rule 10

	Ident          goto state 3
	Char           goto state 4
	Double         goto state 5
	Integer        goto state 6
	String         goto state 7
	SBlock         goto state 8
	SBlock1        goto state 9
	Instruction    goto state 10
	ListInstructiongoto state 11
	SDeclaration   goto state 12
	SStatement     goto state 13
	JumpSStatement goto state 14
	BranchSStatementgoto state 15
	IterSStatement goto state 16
	Expr           goto state 17
	Expr1          goto state 18
	Expr2          goto state 19
	Expr3          goto state 20
	Expr4          goto state 21
	Expr5          goto state 22
	Expr6          goto state 23
	Expr7          goto state 24
	Expr8          goto state 25
	Expr9          goto state 26
	Expr10         goto state 27
	Expr11         goto state 28
	Boolean        goto state 29
	Expr12         goto state 30
	SStatement1    goto state 31
	FunCall        goto state 32

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'&='           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'**'           reduce using rule 1
	'*='           reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'-='           reduce using rule 1
	'/'            reduce using rule 1
	'/='           reduce using rule 1
	':'            reduce using rule 1
	':='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'^='           reduce using rule 1
	'|='           reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	%eof           reduce using rule 1


State 3

	Expr9 -> Ident .                                    (rule 83)
	FunCall -> Ident . '(' ListExpr ')'                 (rule 104)

	'!='           reduce using rule 83
	'%'            reduce using rule 83
	'&&'           reduce using rule 83
	'&='           reduce using rule 83
	'('            shift, and enter state 99
	')'            reduce using rule 83
	'*'            reduce using rule 83
	'**'           reduce using rule 83
	'*='           reduce using rule 83
	'+'            reduce using rule 83
	'++'           reduce using rule 83
	'+='           reduce using rule 83
	','            reduce using rule 83
	'-'            reduce using rule 83
	'--'           reduce using rule 83
	'-='           reduce using rule 83
	'/'            reduce using rule 83
	'/='           reduce using rule 83
	':='           reduce using rule 83
	';'            reduce using rule 83
	'<'            reduce using rule 83
	'<='           reduce using rule 83
	'=='           reduce using rule 83
	'>'            reduce using rule 83
	'>='           reduce using rule 83
	'['            reduce using rule 83
	']'            reduce using rule 83
	'^='           reduce using rule 83
	'|='           reduce using rule 83
	'||'           reduce using rule 83
	'}'            reduce using rule 83
	%eof           reduce using rule 83


State 4

	Expr11 -> Char .                                    (rule 89)

	'!='           reduce using rule 89
	'%'            reduce using rule 89
	'&&'           reduce using rule 89
	'&='           reduce using rule 89
	')'            reduce using rule 89
	'*'            reduce using rule 89
	'**'           reduce using rule 89
	'*='           reduce using rule 89
	'+'            reduce using rule 89
	'++'           reduce using rule 89
	'+='           reduce using rule 89
	','            reduce using rule 89
	'-'            reduce using rule 89
	'--'           reduce using rule 89
	'-='           reduce using rule 89
	'/'            reduce using rule 89
	'/='           reduce using rule 89
	':='           reduce using rule 89
	';'            reduce using rule 89
	'<'            reduce using rule 89
	'<='           reduce using rule 89
	'=='           reduce using rule 89
	'>'            reduce using rule 89
	'>='           reduce using rule 89
	'['            reduce using rule 89
	']'            reduce using rule 89
	'^='           reduce using rule 89
	'|='           reduce using rule 89
	'||'           reduce using rule 89
	'}'            reduce using rule 89
	%eof           reduce using rule 89


State 5

	Expr11 -> Double .                                  (rule 91)

	'!='           reduce using rule 91
	'%'            reduce using rule 91
	'&&'           reduce using rule 91
	'&='           reduce using rule 91
	')'            reduce using rule 91
	'*'            reduce using rule 91
	'**'           reduce using rule 91
	'*='           reduce using rule 91
	'+'            reduce using rule 91
	'++'           reduce using rule 91
	'+='           reduce using rule 91
	','            reduce using rule 91
	'-'            reduce using rule 91
	'--'           reduce using rule 91
	'-='           reduce using rule 91
	'/'            reduce using rule 91
	'/='           reduce using rule 91
	':='           reduce using rule 91
	';'            reduce using rule 91
	'<'            reduce using rule 91
	'<='           reduce using rule 91
	'=='           reduce using rule 91
	'>'            reduce using rule 91
	'>='           reduce using rule 91
	'['            reduce using rule 91
	']'            reduce using rule 91
	'^='           reduce using rule 91
	'|='           reduce using rule 91
	'||'           reduce using rule 91
	'}'            reduce using rule 91
	%eof           reduce using rule 91


State 6

	Expr11 -> Integer .                                 (rule 88)

	'!='           reduce using rule 88
	'%'            reduce using rule 88
	'&&'           reduce using rule 88
	'&='           reduce using rule 88
	')'            reduce using rule 88
	'*'            reduce using rule 88
	'**'           reduce using rule 88
	'*='           reduce using rule 88
	'+'            reduce using rule 88
	'++'           reduce using rule 88
	'+='           reduce using rule 88
	','            reduce using rule 88
	'-'            reduce using rule 88
	'--'           reduce using rule 88
	'-='           reduce using rule 88
	'/'            reduce using rule 88
	'/='           reduce using rule 88
	':='           reduce using rule 88
	';'            reduce using rule 88
	'<'            reduce using rule 88
	'<='           reduce using rule 88
	'=='           reduce using rule 88
	'>'            reduce using rule 88
	'>='           reduce using rule 88
	'['            reduce using rule 88
	']'            reduce using rule 88
	'^='           reduce using rule 88
	'|='           reduce using rule 88
	'||'           reduce using rule 88
	'}'            reduce using rule 88
	%eof           reduce using rule 88


State 7

	Expr11 -> String .                                  (rule 90)

	'!='           reduce using rule 90
	'%'            reduce using rule 90
	'&&'           reduce using rule 90
	'&='           reduce using rule 90
	')'            reduce using rule 90
	'*'            reduce using rule 90
	'**'           reduce using rule 90
	'*='           reduce using rule 90
	'+'            reduce using rule 90
	'++'           reduce using rule 90
	'+='           reduce using rule 90
	','            reduce using rule 90
	'-'            reduce using rule 90
	'--'           reduce using rule 90
	'-='           reduce using rule 90
	'/'            reduce using rule 90
	'/='           reduce using rule 90
	':='           reduce using rule 90
	';'            reduce using rule 90
	'<'            reduce using rule 90
	'<='           reduce using rule 90
	'=='           reduce using rule 90
	'>'            reduce using rule 90
	'>='           reduce using rule 90
	'['            reduce using rule 90
	']'            reduce using rule 90
	'^='           reduce using rule 90
	'|='           reduce using rule 90
	'||'           reduce using rule 90
	'}'            reduce using rule 90
	%eof           reduce using rule 90


State 8

	SStatement -> SBlock .                              (rule 33)

	';'            reduce using rule 33
	'}'            reduce using rule 33
	%eof           reduce using rule 33


State 9

	%start_pSBlock1 -> SBlock1 .                        (rule 0)

	%eof           accept


State 10

	ListInstruction -> Instruction .                    (rule 11)
	ListInstruction -> Instruction . ';' ListInstruction    (rule 12)

	';'            shift, and enter state 98
	'}'            reduce using rule 11
	%eof           reduce using rule 11


State 11

	SBlock1 -> ListInstruction .                        (rule 7)

	'}'            reduce using rule 7
	%eof           reduce using rule 7


State 12

	Instruction -> SDeclaration .                       (rule 9)

	';'            reduce using rule 9
	'}'            reduce using rule 9
	%eof           reduce using rule 9


State 13

	Instruction -> SStatement .                         (rule 8)

	';'            reduce using rule 8
	'}'            reduce using rule 8
	%eof           reduce using rule 8


State 14

	SStatement -> JumpSStatement .                      (rule 35)

	';'            reduce using rule 35
	'}'            reduce using rule 35
	%eof           reduce using rule 35


State 15

	SStatement -> BranchSStatement .                    (rule 37)

	';'            reduce using rule 37
	'}'            reduce using rule 37
	%eof           reduce using rule 37


State 16

	SStatement -> IterSStatement .                      (rule 36)

	';'            reduce using rule 36
	'}'            reduce using rule 36
	%eof           reduce using rule 36


State 17

	SStatement -> Expr . Assignment_op Expr             (rule 38)
	Expr -> Expr . '||' Expr1                           (rule 55)

	'&='           shift, and enter state 89
	'*='           shift, and enter state 90
	'+='           shift, and enter state 91
	'-='           shift, and enter state 92
	'/='           shift, and enter state 93
	':='           shift, and enter state 94
	'^='           shift, and enter state 95
	'|='           shift, and enter state 96
	'||'           shift, and enter state 97

	Assignment_op  goto state 88

State 18

	Expr -> Expr1 .                                     (rule 56)
	Expr1 -> Expr1 . '&&' Expr2                         (rule 57)

	'&&'           shift, and enter state 87
	'&='           reduce using rule 56
	')'            reduce using rule 56
	'*='           reduce using rule 56
	'+='           reduce using rule 56
	','            reduce using rule 56
	'-='           reduce using rule 56
	'/='           reduce using rule 56
	':='           reduce using rule 56
	';'            reduce using rule 56
	']'            reduce using rule 56
	'^='           reduce using rule 56
	'|='           reduce using rule 56
	'||'           reduce using rule 56
	'}'            reduce using rule 56
	%eof           reduce using rule 56


State 19

	Expr1 -> Expr2 .                                    (rule 58)

	'&&'           reduce using rule 58
	'&='           reduce using rule 58
	')'            reduce using rule 58
	'*='           reduce using rule 58
	'+='           reduce using rule 58
	','            reduce using rule 58
	'-='           reduce using rule 58
	'/='           reduce using rule 58
	':='           reduce using rule 58
	';'            reduce using rule 58
	']'            reduce using rule 58
	'^='           reduce using rule 58
	'|='           reduce using rule 58
	'||'           reduce using rule 58
	'}'            reduce using rule 58
	%eof           reduce using rule 58


State 20

	Expr2 -> Expr3 .                                    (rule 60)

	'&&'           reduce using rule 60
	'&='           reduce using rule 60
	')'            reduce using rule 60
	'*='           reduce using rule 60
	'+='           reduce using rule 60
	','            reduce using rule 60
	'-='           reduce using rule 60
	'/='           reduce using rule 60
	':='           reduce using rule 60
	';'            reduce using rule 60
	']'            reduce using rule 60
	'^='           reduce using rule 60
	'|='           reduce using rule 60
	'||'           reduce using rule 60
	'}'            reduce using rule 60
	%eof           reduce using rule 60


State 21
